manifests/chart/templates/deployment.yaml
---
# Source: chart/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: release-name-chart
  labels:
    app: chart
    release: release-name
    chart: chart-0.1.0
    heritage: Tiller
    webcontainer: "true"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: chart
        release: release-name
        webcontainer: "true"
    spec:
      containers:
        - name: release-name-chart
          image: ":"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: cms-files
              mountPath: /var/www/docroot/sites/default/files
          # TODO these probes were /user/login, determine what they should be
          # TODO the timeoutSeconds were bumped higher than swarm test project
          #      to support the web container not being cycled during cache
          #      rebuilds or other things where Drupal takes a bit to become
          #      responsive again
          livenessProbe:
            timeoutSeconds: 10
            httpGet:
              path: /robots.txt
              port: 80
          readinessProbe:
            timeoutSeconds: 10
            httpGet:
              path: /robots.txt
              port: 80
          resources:
            null
            
      imagePullSecrets:
        - name: gitlab-registry-secret
      volumes:
        - name: cms-files
          persistentVolumeClaim:
            claimName: release-name-chart-files
